created pics folder

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
         <div class="right">
             <div class="lifelines"></div>
                 <div class="lifelinein">
-                    <img src="./5050.png" alt="">
+                    <img src="./pics/5050.png" alt="">
                 </div>
                 <div class="lifelinein">
-                    <img src="./AskTheAudience.png" alt="">
+                    <img src="./pics/AskTheAudience.png" alt="">
                 </div>
                 <div class="lifelinein">
-                    <img src="./PhoneAFriend.png" alt="">
+                    <img src="./pics/PhoneAFriend.png" alt="">
                 </div>
             <div class="hrl"></div>
             <div class="progress">
