--- a/index2.html
+++ b/index2.html
@@ -73,6 +73,20 @@
     #result-container button {
       padding: 8px 16px;
     }
+    .progress-labels {
+      position: absolute;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+      display: flex;
+      flex-direction: column;
+    }
+
+    .progress-label {
+      font-size: 14px;
+      color: #fff;
+      margin-bottom: 5px;
+    }
   </style>
 <body>
   <div id="question-container">
@@ -84,6 +98,7 @@
       <li><button onclick="checkAnswer(3)" id="answer3">Answer 4</button></li>
     </ul>
   </div>
+  
 
   <div id="result-container" style="display: none;">
     <p id="result"></p>
@@ -112,30 +127,12 @@
       return Math.floor(Math.random() * questions.length);
     }
 
-    function shuffle(array) {
-      let currentIndex = array.length;
-      let temporaryValue, randomIndex;
-
-      while (currentIndex !== 0) {
-        randomIndex = Math.floor(Math.random() * currentIndex);
-        currentIndex--;
-
-        temporaryValue = array[currentIndex];
-        array[currentIndex] = array[randomIndex];
-        array[randomIndex] = temporaryValue;
-      }
-
-      return array;
-    }
-
     function displayQuestion() {
       if (questions.length === 0) {
         // All questions answered
         document.getElementById("question").textContent = "You've answered all questions.";
         document.getElementById("answers").style.display = "none";
         return;
-        
-        const shuffledAnswers = shuffle([...questions[currentQuestion].answers]);
       }
 
       currentQuestion = getRandomQuestion();
@@ -145,11 +142,11 @@
       const answersElement = document.getElementById("answers");
       questionElement.textContent = questions[currentQuestion].question;
 
-      const shuffledAnswers = shuffle([...questions[currentQuestion].answers]);
+      const answers = questions[currentQuestion].answers;
 
       for (let i = 0; i < 4; i++) {
         const answerBtn = document.getElementById(`answer${i}`);
-        answerBtn.textContent = shuffledAnswers[i];
+        answerBtn.textContent = answers[i];
         answerBtn.disabled = false;
       }
     }
@@ -188,6 +185,57 @@
 
     displayQuestion();
   </script>
+
+
+  <script>
+    let correctAnswers = 0; // Track correct answers
+
+    function checkAnswer(selectedAnswer) {
+      if (answered) return;
+
+      const resultContainer = document.getElementById("result-container");
+      const result = document.getElementById("result");
+
+      answered = true;
+
+      for (let i = 0; i < 4; i++) {
+        const answerBtn = document.getElementById(`answer${i}`);
+        answerBtn.disabled = true;
+      }
+
+      if (selectedAnswer === questions[currentQuestion].correctAnswer) {
+        result.textContent = "Correct!";
+        correctAnswers++; // Increment correct answers
+      } else {
+        result.textContent = "Wrong!";
+      }
+
+      resultContainer.style.display = "block";
+
+      // Remove the answered question from the array
+      questions.splice(currentQuestion, 1);
+    }
+
+    displayQuestion();
+  </script>
+  
+  <div class="progress-labels">
+    <div class="progress-label">£0</div>
+    <div class="progress-label">£250</div>
+    <div class="progress-label">£500</div>
+    <div class="progress-label">£1,000</div>
+    <div class="progress-label">£2,500</div>
+    <div class="progress-label">£5,000</div>
+    <div class="progress-label">£10,000</div>
+    <div class="progress-label">£25,000</div>
+    <div class="progress-label">£50,000</div>
+    <div class="progress-label">£100,000</div>
+    <div class="progress-label">£250,000</div>
+    <div class="progress-label">£500,000</div>
+    <div class="progress-label">£1,000,000</div>
+  </div>
+
+
 </body>
 </html>
 
