--- a/index2.html
+++ b/index2.html
@@ -1,93 +1,111 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Who Wants To Be a HTML Millionaire?</title>
 </head>
 <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #0c3b78;
-      color: white;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    #question-container {
-      background-color: #222;
-      border-radius: 10px;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-      position: relative;
-      z-index: 1;
-    }
-    #result-container {
-      background-color: #222;
-      border-radius: 10px;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-      position: absolute; 
-      top: 50%; 
-      left: 50%; 
-      transform: translate(-50%, -50%); 
-      z-index: 2;
-    }
-    h2 {
-      margin-bottom: 20px;
-      font-size: 24px;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    li {
-      margin-bottom: 10px;
-    }
-    button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      background-color: #0c3b78;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    button:hover {
-      background-color: #164fa5;
-    }
-    #result-container {
-      margin-top: 20px;
-    }
-    #result {
-      font-size: 20px;
-      margin-bottom: 10px;
-    }
-    #result-container button {
-      padding: 8px 16px;
-    }
-    .progress-labels {
-      position: absolute;
-      top: 50%;
-      right: 10px;
-      transform: translateY(-50%);
-      display: flex;
-      flex-direction: column;
-    }
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #0c3b78;
+    color: white;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 
-    .progress-label {
-      font-size: 14px;
-      color: #fff;
-      margin-bottom: 5px;
-    }
-  </style>
+  #question-container {
+    background-color: #222;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 1;
+  }
+
+  #result-container {
+    background-color: #222;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+  }
+
+  h2 {
+    margin-bottom: 20px;
+    font-size: 24px;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  li {
+    margin-bottom: 10px;
+  }
+
+  button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #0c3b78;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+
+  button:hover {
+    background-color: #164fa5;
+  }
+
+  #result-container {
+    margin-top: 20px;
+  }
+
+  #result {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  #result-container button {
+    padding: 8px 16px;
+  }
+
+  .progress-labels {
+    position: fixed;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+  }
+
+  .progress-label {
+    font-size: 14px;
+    color: white;
+    margin-bottom: 5px;
+  }
+
+  .highlight {
+    color: yellow;
+    /* Change text color to yellow */
+  }
+</style>
+
 <body>
   <div id="question-container">
     <h2 id="question">Question:</h2>
@@ -98,11 +116,27 @@
       <li><button onclick="checkAnswer(3)" id="answer3">Answer 4</button></li>
     </ul>
   </div>
-  
+
 
   <div id="result-container" style="display: none;">
     <p id="result"></p>
     <button onclick="nextQuestion()">Next Question</button>
+  </div>
+
+  <div class="progress-labels">
+    <div class="progress-label">£1,000,000</div>
+    <div class="progress-label">£500,000</div>
+    <div class="progress-label">£250,000</div>
+    <div class="progress-label">£100,000</div>
+    <div class="progress-label">£50,000</div>
+    <div class="progress-label">£25,000</div>
+    <div class="progress-label">£10,000</div>
+    <div class="progress-label">£5,000</div>
+    <div class="progress-label">£2,500</div>
+    <div class="progress-label">£1,000</div>
+    <div class="progress-label">£500</div>
+    <div class="progress-label">£250</div>
+    <div class="progress-label highlight">£0</div>
   </div>
 
   <script>
@@ -117,11 +151,67 @@
         answers: ["Mars", "Jupiter", "Saturn", "Earth"],
         correctAnswer: 1
       },
+      {
+        question: "What is the capital of Japan?",
+        answers: ["Beijing", "Seoul", "Tokyo", "Bangkok"],
+        correctAnswer: 2
+      },
+      {
+        question: "Which planet is known as the 'Red Planet'?",
+        answers: ["Mars", "Venus", "Jupiter", "Saturn"],
+        correctAnswer: 0
+      },
+      {
+        question: "Who wrote 'Romeo and Juliet'?",
+        answers: ["Charles Dickens", "William Shakespeare", "Jane Austen", "Mark Twain"],
+        correctAnswer: 1
+      },
+      {
+        question: "What is the largest mammal on Earth?",
+        answers: ["Elephant", "Blue Whale", "Giraffe", "Gorilla"],
+        correctAnswer: 1
+      },
+      {
+        question: "In which year did the first moon landing occur?",
+        answers: ["1969", "1975", "1982", "1990"],
+        correctAnswer: 0
+      },
+      {
+        question: "Who painted the Mona Lisa?",
+        answers: ["Vincent van Gogh", "Leonardo da Vinci", "Pablo Picasso", "Michelangelo"],
+        correctAnswer: 1
+      },
+      {
+        question: "What is the largest ocean on Earth?",
+        answers: ["Atlantic Ocean", "Indian Ocean", "Southern Ocean", "Pacific Ocean"],
+        correctAnswer: 3
+      },
+      {
+        question: "Which gas do plants absorb during photosynthesis?",
+        answers: ["Oxygen", "Nitrogen", "Carbon Dioxide", "Hydrogen"],
+        correctAnswer: 2
+      },
+      {
+        question: "Who is known as the 'Father of Computer Science'?",
+        answers: ["Bill Gates", "Alan Turing", "Steve Jobs", "Ada Lovelace"],
+        correctAnswer: 1
+      },
+      {
+        question: "What is the currency of Brazil?",
+        answers: ["Peso", "Real", "Baht", "Euro"],
+        correctAnswer: 1
+      }
       // Add more questions following the same structure
     ];
 
     let currentQuestion = null;
     let answered = false;
+    let winnings = 0;
+
+    const prizeLevels = [
+      "£1,000,000", "£500,000", "£250,000", "£100,000", "£50,000", "£25,000", "£10,000", "£5,000", "£2,500", "£1,000", "£500", "£250", "£0"
+    ];
+
 
     function getRandomQuestion() {
       return Math.floor(Math.random() * questions.length);
@@ -166,8 +256,11 @@
 
       if (selectedAnswer === questions[currentQuestion].correctAnswer) {
         result.textContent = "Correct!";
+        // Increase winnings for correct answer
+        moveProgress();
       } else {
         result.textContent = "Wrong!";
+        // Reset winnings to the last checkpoint (if applicable)
       }
 
       resultContainer.style.display = "block";
@@ -183,59 +276,33 @@
       displayQuestion();
     }
 
-    displayQuestion();
-  </script>
+    function moveProgress() {
+      const progressLabels = document.querySelectorAll(".progress-label");
 
+      // Clear previous highlights
+      //progressLabels.forEach(label => label.classList.remove("highlight"));
 
-  <script>
-    let correctAnswers = 0; // Track correct answers
+      const labelIndex = calculatePrizeIndex();
+      console.log("Label Index:", labelIndex); // Added this line for debugging
 
-    function checkAnswer(selectedAnswer) {
-      if (answered) return;
-
-      const resultContainer = document.getElementById("result-container");
-      const result = document.getElementById("result");
-
-      answered = true;
-
-      for (let i = 0; i < 4; i++) {
-        const answerBtn = document.getElementById(`answer${i}`);
-        answerBtn.disabled = true;
+      if (labelIndex >= 0) {
+        console.log("Adding highlight"); // Added this line for debugging
+        progressLabels[labelIndex].classList.add("highlight");
       }
+    }
 
-      if (selectedAnswer === questions[currentQuestion].correctAnswer) {
-        result.textContent = "Correct!";
-        correctAnswers++; // Increment correct answers
-      } else {
-        result.textContent = "Wrong!";
-      }
 
-      resultContainer.style.display = "block";
+    let answeredQuestions = 1;
 
-      // Remove the answered question from the array
-      questions.splice(currentQuestion, 1);
+    function calculatePrizeIndex() {
+      answeredQuestions++;
+      return prizeLevels.length - answeredQuestions;
     }
 
     displayQuestion();
   </script>
-  
-  <div class="progress-labels">
-    <div class="progress-label">£0</div>
-    <div class="progress-label">£250</div>
-    <div class="progress-label">£500</div>
-    <div class="progress-label">£1,000</div>
-    <div class="progress-label">£2,500</div>
-    <div class="progress-label">£5,000</div>
-    <div class="progress-label">£10,000</div>
-    <div class="progress-label">£25,000</div>
-    <div class="progress-label">£50,000</div>
-    <div class="progress-label">£100,000</div>
-    <div class="progress-label">£250,000</div>
-    <div class="progress-label">£500,000</div>
-    <div class="progress-label">£1,000,000</div>
-  </div>
 
 
 </body>
-</html>
 
+</html>
