testing background color

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Who Wants To Be a Millionaire?</title>
+  <title>Who Wants To Be a HTML Millionaire?</title>
 </head>
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #0c3b78;
+    background-color: #0c7820;
     color: white;
     margin: 0;
     padding: 0;
