--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #0c7820;
+    background-color: #0c3b78;
     color: white;
     margin: 0;
     padding: 0;
