--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Who Wants To Be a Ai Millionaire?</title>
+  <title>Who Wants To Be a AI Millionaire?</title>
 </head>
 <style>
   body {
